tdf#140881: Ignore WOFF/WOFF2 fonts with FontConfig

FC_FONT_WRAPPER requires unreleased FontConfig, but lets have this in so
it works when FontConfig have it.

Change-Id: I8f48ac1f68a3af6e1853e9eb1925d382b57136c0
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/156049
Tested-by: Jenkins
Reviewed-by: خالد حسني <khaled@libreoffice.org>